Removing security issues
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,8 @@ titles_from_headings:
 include:
   - _redirects
 exclude:
-  - packag-lock.json
+  - package-lock.json
+  - package.json
   - Guardfile
   - '*/glossary.md'
   - '*/README.md'
